tests/NormalTests/paczka1/small_fuzzy/58307765.err
Error in line 1: BofBYMp0 A193 40,7
Error in line 5: 227yeo1ZY S823 44,7
